PokemonGachapon and Bug-Fixes