@@ -2,8 +2,8 @@ package net.andrespr.casinorocket.screen.custom;
 
 import com.mojang.blaze3d.systems.RenderSystem;
 import net.andrespr.casinorocket.games.slot.SlotLineResult;
+import net.andrespr.casinorocket.games.slot.SlotReels;
 import net.andrespr.casinorocket.games.slot.SlotSymbol;
-import net.andrespr.casinorocket.games.slot.SlotSymbolPicker;
 import net.andrespr.casinorocket.network.c2s.DoSpinC2SPayload;
 import net.andrespr.casinorocket.screen.ModGuiTextures;
 import net.andrespr.casinorocket.screen.widget.ModButtons;
@@ -16,6 +16,9 @@ import net.minecraft.entity.player.PlayerInventory;
 import net.minecraft.text.Text;
 import net.minecraft.util.Identifier;
 
+import java.util.List;
+import java.util.concurrent.ThreadLocalRandom;
+
 public class SlotMachineScreen extends CasinoMachineScreen<SlotMachineScreenHandler> {
 
     private SlotButton spinButton;
@@ -24,21 +27,33 @@ public class SlotMachineScreen extends CasinoMachineScreen<SlotMachineScreenHand
     private long pendingBalance = -1L;
     private int betAmount = 10;
 
-    private java.util.List<SlotLineResult> lastWins = java.util.Collections.emptyList();
+    private List<SlotLineResult> lastWins = List.of();
     private int lastWinAmount = 0;
+
+    // --- REEL / LAYOUT CONSTANTS ---
 
     private static final int SYMBOL_SIZE = 32;
     private static final int[] COLUMN_X = { 60 , 99 , 138 };
-    private static final int ROW_Y = 46;
+    // Y de la fila superior visible
+    private static final int ROW_Y = 45;
+    // Dibujamos 5 filas virtuales: [oculta arriba, visible top, visible mid, visible bottom, oculta abajo]
+    private static final int VIRTUAL_ROWS = 5;
+
+    // --- ANIMACIÓN / STRIPS ---
 
     private boolean isSpinning = false;
 
-    private final float[] reelOffset = new float[3];
-    private final int[] reelTimer = new int[3];
-    private final boolean[] reelSpinning = new boolean[3];
+    // Índice en el strip de la fila 0 (la oculta superior) por carrete
+    private final int[] reelIndex = new int[3];
+    // Índice objetivo de la fila 0 cuando el carrete termine de girar
+    private final int[] targetTopIndex = new int[3];
 
-    private final SlotSymbol[][] tempMatrix = new SlotSymbol[5][3];
-    private SlotSymbol[][] finalMatrix = null;
+    // Desplazamiento vertical (en píxeles) de cada carrete
+    private final float[] reelOffset = new float[3];
+    // Tiempo mínimo que debe seguir girando cada carrete
+    private final int[] reelTimer = new int[3];
+    // Si el carrete sigue girando o ya está detenido
+    private final boolean[] reelSpinning = new boolean[3];
 
     public SlotMachineScreen(SlotMachineScreenHandler handler, PlayerInventory inv, Text title) {
         super(handler, inv, title);
@@ -46,11 +61,15 @@ public class SlotMachineScreen extends CasinoMachineScreen<SlotMachineScreenHand
         this.backgroundHeight = 206;
     }
 
+    // === INIT ===
+
     @Override
     @SuppressWarnings("unused")
     protected void init() {
         super.init();
-        fillRandomMatrix();
+
+        initRandomReels();
+
         int baseX = (this.width - this.backgroundWidth) / 2;
         int baseY = (this.height - this.backgroundHeight) / 2;
 
@@ -62,48 +81,81 @@ public class SlotMachineScreen extends CasinoMachineScreen<SlotMachineScreenHand
         this.addDrawableChild(spinButton);
     }
 
+    private void initRandomReels() {
+        // Estado inicial: cada carrete en una posición aleatoria del strip
+        for (int col = 0; col < 3; col++) {
+            int len = SlotReels.STRIPS[col].length;
+            reelIndex[col] = ThreadLocalRandom.current().nextInt(len);
+            reelOffset[col] = 0f;
+            reelSpinning[col] = false;
+            reelTimer[col] = 0;
+            targetTopIndex[col] = reelIndex[col];
+        }
+    }
+
+    // === BOTONES ===
+
     private void onSpinPressed() {
-        if (client != null && client.player != null) {
+        if (client != null && client.player != null && !isSpinning) {
             ClientPlayNetworking.send(new DoSpinC2SPayload());
         }
     }
 
-    // === EMPTY SPACES ===
-    private void fillRandomMatrix() {
-        for (int r = 0; r < 5; r++) {
-            for (int c = 0; c < 3; c++) {
-                tempMatrix[r][c] = SlotSymbolPicker.random();
-            }
-        }
-    }
+    // === SPIN / RESULTADO DEL SERVIDOR ===
 
-    // === SPIN / ANIMATION ===
-
-    private void startSpinAnimation() {
-        isSpinning = true;
-        if (this.spinButton != null) {
-            this.spinButton.active = false;
-        }
-
-        for (int col = 0; col < 3; col++) {
-            reelOffset[col] = 0f;
-            reelSpinning[col] = true;
-            reelTimer[col] = 30 + col * 10;
-
-            for (int row = 0; row < 5; row++) {
-                tempMatrix[row][col] = SlotSymbolPicker.random();
-            }
-        }
-    }
-
-    public void onSpinResult(SlotSymbol[][] matrix, java.util.List<SlotLineResult> wins,
+    /**
+     * Este método lo llama SpinResultReceiver cuando llega el S2C.
+     * matrix es la matriz 3x3 final (evaluada en el servidor).
+     */
+    public void onSpinResult(SlotSymbol[][] matrix, List<SlotLineResult> wins,
                              int totalWin, long newBalance) {
-        this.finalMatrix = matrix;
+
         this.lastWins = wins;
         this.lastWinAmount = totalWin;
         this.pendingBalance = newBalance;
 
+        // Calculamos para cada carrete qué índice del strip debe quedar
+        // como fila 0 (oculta superior) para que:
+        // fila1 -> matrix[0][col], fila2 -> matrix[1][col], fila3 -> matrix[2][col]
+        for (int col = 0; col < 3; col++) {
+            SlotSymbol top    = matrix[0][col];
+            SlotSymbol middle = matrix[1][col];
+            SlotSymbol bottom = matrix[2][col];
+
+            SlotSymbol[] strip = SlotReels.STRIPS[col];
+            int len = strip.length;
+
+            int found = reelIndex[col]; // fallback
+            for (int i = 0; i < len; i++) {
+                SlotSymbol a = strip[(i + 1) % len]; // fila visible superior
+                SlotSymbol b = strip[(i + 2) % len]; // fila visible central
+                SlotSymbol c = strip[(i + 3) % len]; // fila visible inferior
+
+                if (a == top && b == middle && c == bottom) {
+                    found = i;
+                    break;
+                }
+            }
+
+            targetTopIndex[col] = found;
+        }
+
         startSpinAnimation();
+    }
+
+    private void startSpinAnimation() {
+        isSpinning = true;
+        if (this.spinButton != null) this.spinButton.active = false;
+
+        // tiempos exactos de giro
+        reelTimer[0] = 30;  // izquierda
+        reelTimer[1] = 40;  // centro
+        reelTimer[2] = 50;  // derecha
+
+        for (int col = 0; col < 3; col++) {
+            reelOffset[col] = 0f;
+            reelSpinning[col] = true;
+        }
     }
 
     private void finishSpin() {
@@ -119,6 +171,8 @@ public class SlotMachineScreen extends CasinoMachineScreen<SlotMachineScreenHand
         }
     }
 
+    // === TICK DE LA PANTALLA: ANIMACIÓN ===
+
     @Override
     public void handledScreenTick() {
         super.handledScreenTick();
@@ -128,35 +182,32 @@ public class SlotMachineScreen extends CasinoMachineScreen<SlotMachineScreenHand
         boolean anySpinning = false;
 
         for (int col = 0; col < 3; col++) {
+
             if (!reelSpinning[col]) continue;
 
             anySpinning = true;
 
+            int len = SlotReels.STRIPS[col].length;
+
+            // velocidad
             reelOffset[col] += 20.0f;
 
             if (reelOffset[col] >= SYMBOL_SIZE) {
                 reelOffset[col] -= SYMBOL_SIZE;
-
-                tempMatrix[4][col] = tempMatrix[3][col];
-                tempMatrix[3][col] = tempMatrix[2][col];
-                tempMatrix[2][col] = tempMatrix[1][col];
-                tempMatrix[1][col] = tempMatrix[0][col];
-                tempMatrix[0][col] = SlotSymbolPicker.random();
+                reelIndex[col] = (reelIndex[col] + 1) % len;
             }
 
+            // cuenta regresiva del carrete
             reelTimer[col]--;
+
             if (reelTimer[col] <= 0) {
-                reelSpinning[col] = false;
+                // TIEMPO CUMPLIDO → DETIENE EL CARRETE EXACTO
+
+                // alineamos EXACTO en targetTopIndex
+                reelIndex[col] = targetTopIndex[col];
                 reelOffset[col] = 0f;
 
-                if (finalMatrix != null) {
-                    tempMatrix[1][col] = finalMatrix[0][col]; // y = 45
-                    tempMatrix[2][col] = finalMatrix[1][col]; // y = 77
-                    tempMatrix[3][col] = finalMatrix[2][col]; // y = 109
-
-                    tempMatrix[0][col] = SlotSymbolPicker.random(); // y = 13
-                    tempMatrix[4][col] = SlotSymbolPicker.random(); // y = 141
-                }
+                reelSpinning[col] = false;
             }
         }
 
@@ -165,12 +216,17 @@ public class SlotMachineScreen extends CasinoMachineScreen<SlotMachineScreenHand
         }
     }
 
-    // === DRAW ===
+    // === DIBUJO ===
 
     private void drawSymbols(DrawContext ctx, int originX, int originY) {
         for (int col = 0; col < 3; col++) {
-            for (int row = 0; row < 5; row++) {
-                SlotSymbol symbol = tempMatrix[row][col];
+            SlotSymbol[] strip = SlotReels.STRIPS[col];
+            int len = strip.length;
+
+            for (int row = 0; row < VIRTUAL_ROWS; row++) {
+
+                int stripIndex = (reelIndex[col] + row) % len;
+                SlotSymbol symbol = strip[stripIndex];
                 if (symbol == null) continue;
 
                 Identifier texture = ModGuiTextures.SlotTextures.SYMBOL_TEXTURES.get(symbol);
@@ -193,8 +249,13 @@ public class SlotMachineScreen extends CasinoMachineScreen<SlotMachineScreenHand
         int x = (width - backgroundWidth) / 2;
         int y = (height - backgroundHeight) / 2;
 
+        // Reels
         context.drawTexture(ModGuiTextures.REELS, x + 55, y + 39, 0, 0, 120, 112, 120, 112);
+
+        // Símbolos (debajo del marco principal)
         drawSymbols(context, x, y);
+
+        // Marco principal encima
         context.drawTexture(ModGuiTextures.SLOT_MACHINE_GUI, x, y, 0, 0, backgroundWidth, backgroundHeight);
     }
 
@@ -202,6 +263,7 @@ public class SlotMachineScreen extends CasinoMachineScreen<SlotMachineScreenHand
     protected void drawForeground(DrawContext context, int mouseX, int mouseY) {
         drawBalance(context);
         drawBetAmount(context);
+        // Aquí en un futuro puedes dibujar lastWinAmount, líneas ganadoras, etc.
     }
 
     // === UPDATERS ===
@@ -215,7 +277,7 @@ public class SlotMachineScreen extends CasinoMachineScreen<SlotMachineScreenHand
         this.betAmount = betBase * linesMode;
     }
 
-    // === HELPERS ===
+    // === HELPERS: TEXTO ===
 
     private void drawBalance(DrawContext context) {
         String formatted = TextUtils.formatCompact(balance);
@@ -275,8 +337,7 @@ public class SlotMachineScreen extends CasinoMachineScreen<SlotMachineScreenHand
         context.getMatrices().pop();
     }
 
-    // GETTERS
-
+    // GETTER opcional si algún día lo quieres usar en el server o en C2S extra
     public boolean isSpinning() {
         return this.isSpinning;
     }
